# legacy-version

./: .env.example  .flake8  README.md  docker-compose.yml  package-lock.json  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: backend-workflow-entry.yml
backend/api-server/: CONTRIBUTING.md  DEPLOYMENT.md  README.md  deploy-wrapper.sh  deploy.sh  (+1 more)
backend/api-server/guanfu_backend/: .env.example  .gitignore  Dockerfile  Dockerfile.dbbackup  docker-compose-certbot.yaml  docker-compose.yaml  pyproject.toml  setup-env.sh
backend/api-server/guanfu_backend/docs/: getting-started.md
backend/api-server/guanfu_backend/migrations/: env.py
backend/api-server/guanfu_backend/migrations/versions/: 2025_10_08_1401-0f01908e6629_init.py  2025_10_09_1610-7aeb3246501c_add_provider.py  2025_10_09_1651-366782842de9_add_spam_warn.py
backend/api-server/guanfu_backend/nginx/conf.d/: default.conf
backend/api-server/guanfu_backend/scripts/: backup.sh
backend/api-server/guanfu_backend/src/: api_key.py  config.py  crud.py  database.py  enum_serializer.py  main.py  models.py  schemas.py
backend/api-server/guanfu_backend/src/routers/: accommodations.py  human_resources.py  line.py  medical_stations.py  mental_health_resources.py  places.py  reports.py  requirements_hr.py  requirements_supplies.py  restrooms.py  shelters.py  shower_stations.py  supplies.py  supply_items.py  supply_providers.py  volunteer_organizations.py  water_refill_stations.py
backend/api-server/guanfu_backend/src/services/: discord_webhook.py  line_auth.py
scripts/: fix_code.sh
src/: App.vue  main.py
(+184 files in other folders)
